--- a/src/app/campground/campground.component.html
+++ b/src/app/campground/campground.component.html
@@ -1,14 +1,8 @@
-
 <maphilight id="statesMap" [config]="config" [hidden]="hidden">
     <img id="themap" src="assets/planimetria-generale.jpg" usemap="#image-map">
 
-    <map name="image-map">  
-       <area *ngFor="let x of campground.stellplatz" 
-            coords="{{x.coords}}" 
-            shape="poly"  
-            href="{{x.id}}"
-            class={{x.verfuegbar}} >
-            
+    <map name="image-map">
+        <area *ngFor="let x of campground.stellplatz" coords="{{x.coords}}" shape="poly" href="{{x.id}}"
+            class={{x.verfuegbar}}>
     </map>
 </maphilight>
-
