--- a/src/app/my-menu/my-menu.component.html
+++ b/src/app/my-menu/my-menu.component.html
@@ -1,4 +1,7 @@
-{{menuItems.name}}
 
-<p *ngFor="let x of menuItems.multi">{{x}} noch was anderes</p>
+<!-- <mat-menu #menu1="matMenu">
+    <button mat-menu-item matMenuTriggerFor="menu2">{{x}}</button>
+</mat-menu>
+ -->
 
+ <button mat-menu-item *ngFor="let x of menuItems.multi">{{x}} noch was anderes</button>
