--- a/src/app/my-menu/my-menu.component.html
+++ b/src/app/my-menu/my-menu.component.html
@@ -1,7 +1,8 @@
+<button mat-button *ngFor="let x of menuItems.multi">{{x}}</button>
 
-<!-- <mat-menu #menu1="matMenu">
-    <button mat-menu-item matMenuTriggerFor="menu2">{{x}}</button>
+
+<!-- <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+    <button mat-menu-item *ngFor="let x of menuItems.multi">{{x}} noch was anderes</button>
 </mat-menu>
  -->
-
- <button mat-menu-item *ngFor="let x of menuItems.multi">{{x}} noch was anderes</button>
