--- a/src/app/my-menu/my-menu.component.html
+++ b/src/app/my-menu/my-menu.component.html
@@ -1,8 +1,1 @@
-<button mat-button *ngFor="let x of menuItems.multi">{{x}}</button>
-
-
-<!-- <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<mat-menu #menu="matMenu">
-    <button mat-menu-item *ngFor="let x of menuItems.multi">{{x}} noch was anderes</button>
-</mat-menu>
- -->
+<button mat-button *ngFor="let x of menuItems">{{x.tabDescription}}</button>
