--- a/src/app/campground/campground.component.css
+++ b/src/app/campground/campground.component.css
@@ -5,3 +5,41 @@
 .frei{
     background-color: #4d0ec0;
 }
+
+
+
+/*Filter styles*/
+.saturate { filter: saturate(3); }
+.grayscale { filter: grayscale(100%); }
+.contrast { filter: contrast(160%); }
+.brightness { filter: brightness(0.25); }
+.blur { filter: blur(3px); }
+.invert { filter: invert(100%); }
+.sepia { filter: sepia(100%); }
+.huerotate { filter: hue-rotate(180deg); }
+.rss.opacity { filter: opacity(50%); }
+.grayscale:hover  { filter: blur(3px); }
+
+/* 
+.img-overlay-wrap {
+    position: relative;
+    display: inline-block; /* <= shrinks container to image size 
+    transition: transform 150ms ease-in-out;
+  }
+  
+  .img-overlay-wrap img { /* <= optional, for responsiveness 
+     display: block;
+     max-width: 100%;
+     height: auto;
+  }
+  
+  .img-overlay-wrap svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .img-overlay-wrap:hover {
+    transform: rotate( 15deg );
+  }
+*/ 
