--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,30 @@
-
 <mat-card>
-    <mat-card-title>Login</mat-card-title>    
-<mat-card-content>
- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <p>
-        <mat-form-field>
-        <input type="text" matInput placeholder="Username" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />        
-    </mat-form-field>    
-    </p>
-    <p>
-    <mat-form-field>
-        <input type="password" matInput placeholder="Password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-<!--         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Username" formControlName="username"
+                        [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Password" formControlName="password"
+                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <!--         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
- -->    </mat-form-field>
-</p>
-        <button mat-raised-button [disabled]="loading" >
-Login
-        </button>
+ -->
+                </mat-form-field>
+            </p>
+            <button mat-raised-button 
+                [disabled]="loading"
+            >
+                Login
+            </button>
 
-        <button mat-raised-button [disabled]="loading">
-            <mat-spinner  *ngIf="loading" diameter="15">
-            </mat-spinner>
-        </button>
-
-        <p>
-        <a mat-raised-button routerLink="/register">Register</a>
-</form>
-</mat-card-content> 
- </mat-card>    
+            <p>
+                <a mat-raised-button routerLink="/register">Register</a>
+        </form>
+    </mat-card-content>
+</mat-card>
